small spacing fix for response_new.sass

--- a/app/assets/stylesheets/pages/response_new.sass
+++ b/app/assets/stylesheets/pages/response_new.sass
@@ -138,7 +138,7 @@
   color: #333
   h4
     font-size: 1.6em
-    margin-top: 0.2em
+    margin-top: 0.3em
     margin-bottom: 0.2em
     margin-right: 1em
   .btn-group
